kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__select_recovery_0.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 113
expression: "crate::tests::parsing_expr_string(r#\"a.\"#)"
---
Node {
    node: Identifier(
        Identifier {
            names: [
                "a",
                "",
            ],
            pos: [
                Node {
                    node: (),
                    filename: "",
                    line: 1,
                    column: 0,
                    end_line: 1,
                    end_column: 1,
                },
                Node {
                    node: (),
                    filename: "",
                    line: 1,
                    column: 2,
                    end_line: 1,
                    end_column: 2,
                },
            ],
            pkgpath: "",
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 2,
}

