kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__select_recovery_13.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 126
expression: "crate::tests::parsing_expr_string(r#\"a..0\"#)"
---
Node {
    node: Identifier(
        Identifier {
            names: [
                "a",
                "",
                "",
            ],
            pos: [
                Node {
                    node: (),
                    filename: "",
                    line: 1,
                    column: 0,
                    end_line: 1,
                    end_column: 1,
                },
                Node {
                    node: (),
                    filename: "",
                    line: 1,
                    column: 2,
                    end_line: 1,
                    end_column: 3,
                },
                Node {
                    node: (),
                    filename: "",
                    line: 1,
                    column: 3,
                    end_line: 1,
                    end_column: 4,
                },
            ],
            pkgpath: "",
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 3,
}

