kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__select_recovery_2.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 115
expression: "crate::tests::parsing_expr_string(r#\"a.b.c.\"#)"
---
Node {
    node: Identifier(
        Identifier {
            names: [
                "a",
                "b",
                "c",
                "",
            ],
            pos: [
                Node {
                    node: (),
                    filename: "",
                    line: 1,
                    column: 0,
                    end_line: 1,
                    end_column: 1,
                },
                Node {
                    node: (),
                    filename: "",
                    line: 1,
                    column: 2,
                    end_line: 1,
                    end_column: 3,
                },
                Node {
                    node: (),
                    filename: "",
                    line: 1,
                    column: 4,
                    end_line: 1,
                    end_column: 5,
                },
                Node {
                    node: (),
                    filename: "",
                    line: 1,
                    column: 6,
                    end_line: 1,
                    end_column: 6,
                },
            ],
            pkgpath: "",
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 6,
}

