kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__select_recovery_3.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 116
expression: "crate::tests::parsing_expr_string(r#\"''.\"#)"
---
Node {
    node: Selector(
        SelectorExpr {
            value: Node {
                node: StringLit(
                    StringLit {
                        is_long_string: false,
                        raw_value: "''",
                        value: "",
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 2,
            },
            attr: Node {
                node: Identifier {
                    names: [
                        "",
                    ],
                    pos: [
                        Node {
                            node: (),
                            filename: "",
                            line: 1,
                            column: 3,
                            end_line: 1,
                            end_column: 3,
                        },
                    ],
                    pkgpath: "",
                    ctx: Load,
                },
                filename: "",
                line: 1,
                column: 3,
                end_line: 1,
                end_column: 3,
            },
            ctx: Load,
            has_question: false,
        },
    ),
    filename: "",
    line: 1,
    column: 2,
    end_line: 1,
    end_column: 3,
}

