kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__select_recovery_7.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 120
expression: "crate::tests::parsing_expr_string(r#\"a?.b?.\"#)"
---
Node {
    node: Selector(
        SelectorExpr {
            value: Node {
                node: Selector(
                    SelectorExpr {
                        value: Node {
                            node: Identifier(
                                Identifier {
                                    names: [
                                        "a",
                                    ],
                                    pos: [
                                        Node {
                                            node: (),
                                            filename: "",
                                            line: 1,
                                            column: 0,
                                            end_line: 1,
                                            end_column: 1,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 1,
                        },
                        attr: Node {
                            node: Identifier {
                                names: [
                                    "b",
                                ],
                                pos: [
                                    Node {
                                        node: (),
                                        filename: "",
                                        line: 1,
                                        column: 3,
                                        end_line: 1,
                                        end_column: 4,
                                    },
                                ],
                                pkgpath: "",
                                ctx: Load,
                            },
                            filename: "",
                            line: 1,
                            column: 3,
                            end_line: 1,
                            end_column: 4,
                        },
                        ctx: Load,
                        has_question: true,
                    },
                ),
                filename: "",
                line: 1,
                column: 1,
                end_line: 1,
                end_column: 4,
            },
            attr: Node {
                node: Identifier {
                    names: [
                        "",
                    ],
                    pos: [
                        Node {
                            node: (),
                            filename: "",
                            line: 1,
                            column: 6,
                            end_line: 1,
                            end_column: 6,
                        },
                    ],
                    pkgpath: "",
                    ctx: Load,
                },
                filename: "",
                line: 1,
                column: 6,
                end_line: 1,
                end_column: 6,
            },
            ctx: Load,
            has_question: true,
        },
    ),
    filename: "",
    line: 1,
    column: 4,
    end_line: 1,
    end_column: 6,
}

